unpackaged/main/default/objects/Dial800__c/Dial800__c.object-meta.xml
<CustomObject>
    <label>Dial800</label>
    <nameField>
        <displayFormat>D8 {00000}</displayFormat>
        <label>Dial800 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial800</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>