unpackaged/main/default/objects/Dial800__c/fields/ANI__c.field-meta.xml
<CustomField>
    <fullName>ANI__c</fullName>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>