unpackaged/main/default/objects/Dial800__c/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <type>Phone</type>
</CustomField>