unpackaged/main/default/objects/Dial800__c/fields/Call_Start__c.field-meta.xml
<CustomField>
    <fullName>Call_Start__c</fullName>
    <label>Call Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>