unpackaged/main/default/objects/Dial800__c/fields/Connected_Duration__c.field-meta.xml
<CustomField>
    <fullName>Connected_Duration__c</fullName>
    <label>Connected Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>