unpackaged/main/default/objects/Dial800__c/fields/DNIS__c.field-meta.xml
<CustomField>
    <fullName>DNIS__c</fullName>
    <label>DNIS</label>
    <type>Phone</type>
</CustomField>