unpackaged/main/default/objects/Dial800__c/fields/Hunts__c.field-meta.xml
<CustomField>
    <fullName>Hunts__c</fullName>
    <label>Hunts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>