unpackaged/main/default/objects/Dial800__c/fields/Media_Agency__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency__c</fullName>
    <label>Media Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>