unpackaged/main/default/objects/Dial800__c/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>