unpackaged/main/default/objects/Dial800__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <type>Phone</type>
</CustomField>