unpackaged/main/default/objects/Dial800__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Intake__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ANI__c</columns>
    <columns>Connected_Duration__c</columns>
    <columns>Media_Agency__c</columns>
    <columns>Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>