unpackaged/main/default/objects/Dial800__c/listViews/Matched_Intakes.listView-meta.xml
<ListView>
    <fullName>Matched_Intakes</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Intake__c</columns>
    <columns>ANI__c</columns>
    <columns>Campaign__c</columns>
    <columns>Media_Agency__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intake__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Matched Intakes</label>
    <sharedTo>
        <role>Leadership</role>
    </sharedTo>
</ListView>