unpackaged/main/default/objects/Dial800__c/listViews/Unmatched_Intake.listView-meta.xml
<ListView>
    <fullName>Unmatched_Intake</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ANI__c</columns>
    <columns>Station__c</columns>
    <columns>Media_Agency__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Intake__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unmatched Intake</label>
    <sharedTo>
        <role>Leadership</role>
    </sharedTo>
</ListView>